deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
        app.kubernetes.io/name: jellyfin
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - image: jellyfin/jellyfin
        imagePullPolicy: Always
        name: jellyfin
        resources:
          limits:
            gpu.intel.com/i915: "1" # requesting 1 GPU
        ports:
        - containerPort: 8096
          name: web
          protocol: TCP
        volumeMounts:
        - mountPath: "/movies"
          readOnly: false
          name: smb
          subPath: movies
        - mountPath: "/shows"
          readOnly: false
          name: smb
          subPath: shows
        - mountPath: "/new"
          readOnly: false
          name: smb
          subPath: new
        - mountPath: "/music"
          readOnly: false
          name: smb
          subPath: music
        - mountPath: "/anime"
          readOnly: false
          name: smb
          subPath: anime
        - mountPath: "/books"
          readOnly: false
          name: smb
          subPath: books
        - mountPath: "/data/metadata"
          readOnly: false
          name: smb
          subPath: data/metadata
        - mountPath: "/data/cache"
          readOnly: false
          name: smb
          subPath: data/cache
        - mountPath: /config
          name: jellyfin
          subPath: config
        - mountPath: /cache
          name: jellyfin
          subPath: cache
        - mountPath: /transcode
          name: jellyfin
          subPath: transcode
      volumes:
        - name: jellyfin
          persistentVolumeClaim:
            claimName: jellyfin
        - name: smb
          persistentVolumeClaim:
            claimName: pvc-jellyfin-smb
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin 
spec:
  ports:
  - name: web-tcp
    port: 8096
    protocol: TCP
    targetPort: 8096
  - name: web-udp
    port: 8096
    protocol: UDP
    targetPort: 8096
  selector:
    app: jellyfin
  type: ClusterIP
