network.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`watch.monocompute.com`) # change to your domain
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
    - match: Host(`jellyfin.monocompute.com`) # change to your domain
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
      middlewares:
        - name: jellyfin-default-headers
  tls:
    secretName: monocompute-tls # change to your cert name
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jellyfin-default-headers
  namespace: jellyfin
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
